--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,4 @@ serde = { version = "1.0.164", features = ["derive"] }
 serde-xml-rs = { version = "0.6.0", optional = true }
 
 [features]
-xml = ["serde-xml-rs"]
+xml = ["dep:serde-xml-rs"]
