--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "client-3dsdb"
 version = "0.1.0"
 edition = "2021"
+description = "A Rust client for 3DS title DBs."
+repository = "https://github.com/Lewis-Trowbridge/client-3dsdb"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
