--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ license = "MIT"
 ureq = "2.7.1"
 serde = { version = "1.0.164", features = ["derive"] }
 serde-xml-rs = { version = "0.6.0", optional = true }
+serde_json = { version = "1.0.100", optional = true }
 
 [features]
 xml = ["dep:serde-xml-rs"]
+json = ["dep:serde_json"]
