--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ serde = { version = "1.0.164", features = ["derive"] }
 serde-xml-rs = { version = "0.6.0", optional = true }
 serde_json = { version = "1.0.100", optional = true }
 
+[dev-dependencies]
+rstest = "0.18.1"
+
 [features]
 xml = ["dep:serde-xml-rs"]
 json = ["dep:serde_json"]
