--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,16 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ureq = "2.7.1"
+reqwest = { version = "0.11.18", features = ["default", "blocking", "json"] }
 serde = { version = "1.0.164", features = ["derive"] }
 serde-xml-rs = { version = "0.6.0", optional = true }
 serde_json = { version = "1.0.100", optional = true }
+strum = { version = "0.25.0", optional = true }
+strum_macros = { version = "0.25.1", optional = true }
 
 [dev-dependencies]
 rstest = "0.18.1"
 
 [features]
 xml = ["dep:serde-xml-rs"]
-json = ["dep:serde_json"]
+json = ["dep:serde_json", "dep:strum", "dep:strum_macros"]
