--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ strum_macros = { version = "0.25.1", optional = true }
 
 [dev-dependencies]
 rstest = "0.18.1"
+async-std = {version = "1.12.0", features = ["attributes", "tokio1"] }
 
 [features]
 xml = ["dep:serde-xml-rs"]
