--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,12 @@ serde-xml-rs = { version = "0.6.0", optional = true }
 serde_json = { version = "1.0.100", optional = true }
 strum = { version = "0.25.0", optional = true }
 strum_macros = { version = "0.25.1", optional = true }
+futures = "0.3.28"
 
 [dev-dependencies]
 rstest = "0.18.1"
 async-std = {version = "1.12.0", features = ["attributes", "tokio1"] }
+once_cell = "1.18.0"
 
 [features]
 xml = ["dep:serde-xml-rs"]
