--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "client-3dsdb"
-version = "0.2.1"
+version = "0.3.0"
 edition = "2021"
 description = "A Rust client for 3DS title DBs."
 repository = "https://github.com/Lewis-Trowbridge/client-3dsdb"
@@ -15,7 +15,7 @@ serde-xml-rs = { version = "0.6.0", optional = true }
 serde_json = { version = "1.0.100", optional = true }
 strum = { version = "0.25.0", optional = true }
 strum_macros = { version = "0.25.1", optional = true }
-futures = "0.3.28"
+futures = { version = "0.3.28", optional = true }
 
 [dev-dependencies]
 rstest = "0.18.1"
@@ -24,7 +24,7 @@ once_cell = "1.18.0"
 
 [features]
 xml = ["dep:serde-xml-rs"]
-json = ["dep:serde_json", "dep:strum", "dep:strum_macros"]
+json = ["dep:serde_json", "dep:strum", "dep:strum_macros", "dep:futures"]
 
 [package.metadata.docs.rs]
 all-features = true
