--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ license = "MIT"
 [dependencies]
 reqwest = { version = "0.11.18", features = ["default", "blocking", "json"] }
 serde = { version = "1.0.164", features = ["derive"] }
+rayon = "1.7.0"
 serde-xml-rs = { version = "0.6.0", optional = true }
 serde_json = { version = "1.0.100", optional = true }
 strum = { version = "0.25.0", optional = true }
