--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ serde_json = { version = "1.0.100", optional = true }
 strum = { version = "0.25.0", optional = true }
 strum_macros = { version = "0.25.1", optional = true }
 futures = { version = "0.3.28", optional = true }
+itertools = { version = "0.11.0", optional = true }
 
 [dev-dependencies]
 rstest = "0.18.1"
@@ -25,7 +26,13 @@ once_cell = "1.18.0"
 
 [features]
 xml = ["dep:serde-xml-rs"]
-json = ["dep:serde_json", "dep:strum", "dep:strum_macros", "dep:futures"]
+json = [
+    "dep:serde_json",
+    "dep:strum",
+    "dep:strum_macros",
+    "dep:futures",
+    "dep:itertools"
+]
 
 [package.metadata.docs.rs]
 all-features = true
